Index draggable fix, blog overflow fix.

--- a/src/css/core.css
+++ b/src/css/core.css
@@ -1305,9 +1305,11 @@ main {
         text-align: left; } }
   .blog-entry__image {
     display: none;
-    position: absolute;
+    position: fixed;
     width: 50%;
     right: -12em;
+    top: 50%;
+    margin-top: -15%;
     z-index: -1;
     transition: opacity 2s ease-in; }
 
@@ -1418,6 +1420,7 @@ main {
     opacity: 1;
     visibility: visible;
     overflow: hidden;
+    height: 100vh;
     background: linear-gradient(231deg, #fdbb2d, #b21f1f, #1a2a6c, #111, #111);
     background-size: 1600% 1600%;
     -webkit-animation: bg-gradient 40s ease infinite;
