--- a/src/css/layout/menu.scss
+++ b/src/css/layout/menu.scss
@@ -59,6 +59,7 @@
     opacity: 1;
     visibility: visible;
     overflow: hidden;
+    height: 100vh;
     background: linear-gradient(231deg, #fdbb2d, #b21f1f, #1a2a6c, #111, #111);
     background-size: 1600% 1600%;
     -webkit-animation: bg-gradient 40s ease infinite;
